k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-php-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-cookie"
spec:
  tls:
    - secretName: app-php-tls
      hosts:
        - php.domain.com
  rules:
    - host: php.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-php-service
                port:
                  number: 80
